Adding support for CORS (for when running through a reverse proxy like docker+traefik)

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,7 @@
 port = 8880
 debugType = 1 # 1 = None | 2 = Minimal | 3 = Full
-useHTTPS = true
-httpsCert = '/path/to/ssl/certificate'
-httpsKey = '/path/to/ssl/private_key'
+# useHTTPS = true
+# httpsCert = '/path/to/ssl/certificate'
+# httpsKey = '/path/to/ssl/private_key'
+# FQDN = 'protoshock.mewo.gay'
+# countryCode = 'DK'
