--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "sharp": "^0.34.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "socket.io": "^4.7.2"
   },
   "optionalDependencies": {
